Add unit tests for the dispersion module