@@ -1,51 +1,46 @@
 package es.tid.smartsteps.dispersion;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.io.LongWritable;
 import org.apache.hadoop.io.Text;
-import org.apache.hadoop.mrunit.mapreduce.ReduceDriver;
+import org.apache.hadoop.mrunit.mapreduce.MapDriver;
 import org.apache.hadoop.mrunit.types.Pair;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 import org.junit.Before;
 import org.junit.Test;
 
 import es.tid.cosmos.base.data.TypedProtobufWritable;
-import es.tid.cosmos.base.mapreduce.BinaryKey;
 import es.tid.smartsteps.dispersion.data.generated.EntryProtocol.TrafficCounts;
-import es.tid.smartsteps.dispersion.parsing.TrafficCountsParser;
 
 /**
  *
  * @author dmicol
  */
-public class AggregationReducerTest {
+public class TrafficCountsParserMapperTest {
 
-    private ReduceDriver<
-            BinaryKey, TypedProtobufWritable<TrafficCounts>,
+    private MapDriver<
+            LongWritable, Text,
             Text, TypedProtobufWritable<TrafficCounts>> instance;
-    private TrafficCountsParser parser;
-    private BinaryKey key;
-    private TypedProtobufWritable<TrafficCounts> value;
+    private LongWritable key;
+    private Text value;
     
     @Before
     public void setUp() throws IOException {
-        this.instance = new ReduceDriver<
-                BinaryKey, TypedProtobufWritable<TrafficCounts>,
+        this.instance = new MapDriver<
+                LongWritable, Text,
                 Text, TypedProtobufWritable<TrafficCounts>>(
-                        new AggregationReducer());
+                        new TrafficCountsParserMapper());
         final Configuration config = Config.load(
                 Config.class.getResource("/config.properties").openStream(),
                 this.instance.getConfiguration());
         this.instance.setConfiguration(config);
-        this.key = new BinaryKey("4c92f73d4ff50489d8b3e8707d95ddf073fb81aac6"
-                                 + "d0d30f1f2ff3cdc0849b0c", "20120527");
-        this.parser = new TrafficCountsParser(
-                config.getStrings(Config.COUNT_FIELDS));
-        final TrafficCounts counts = this.parser.parse("{\"date\": \"20120527\", "
+        this.key = new LongWritable(102L);
+        this.value = new Text("{\"date\": \"20120527\", "
                 + "\"footfall_observed_basic\": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, "
                 + "0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1], "
                 + "\"footfall_observed_female\": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0,"
@@ -69,7 +64,7 @@ public class AggregationReducerTest {
                 + "\"BILL\": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, "
                 + "0, 0, 0, 0, 0, 0, 0, 0, 0]}, "
                 + "\"footfall_observed_0\": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, "
-                + "0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1], "
+                + "0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1], "
                 + "\"footfall_observed_age_60\": [0, 0, 0, 0, 0, 0, 0, 0, 0, "
                 + "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], "
                 + "\"footfall_observed_age_20\": [0, 0, 0, 0, 0, 0, 0, 0, 0, "
@@ -78,27 +73,27 @@ public class AggregationReducerTest {
                 + "0f1f2ff3cdc0849b0c\", \"footfall_observed_age_40\": [0, 0, "
                 + "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, "
                 + "0, 0, 0]}");
-        this.value = new TypedProtobufWritable<TrafficCounts>(counts);
     }
 
     @Test
-    public void testReduce() throws IOException {
+    public void shouldProduceOutput() throws IOException {
         List<Pair<Text, TypedProtobufWritable<TrafficCounts>>> results =
                 this.instance
-                        .withInput(this.key,
-                                   Arrays.asList(this.value, this.value))
+                        .withInput(this.key, this.value)
                         .run();
         assertNotNull(results);
         assertEquals(1, results.size());
         final Pair<Text, TypedProtobufWritable<TrafficCounts>> result =
                 results.get(0);
-        assertEquals(new Text("4c92f73d4ff50489d8b3e8707d95ddf073fb81aac6d0d30f"
-                              + "1f2ff3cdc0849b0c"), result.getFirst());
-        final TrafficCounts outValue = this.parser.parse(
-                result.getSecond().toString());
-        List<Double> counts = outValue.getFootfallsList().get(0).getValuesList();
-        assertEquals(0, counts.get(15).intValue());
-        assertEquals(4, counts.get(19).intValue());
-        assertEquals(2, counts.get(24).intValue());
+        assertEquals("4c92f73d4ff50489d8b3e8707d95ddf073fb81aac6d0d30f1f2ff3cdc"
+                     + "0849b0c", result.getFirst());
+        assertTrue(result.getSecond().get() instanceof TrafficCounts);
+    }
+    
+    @Test
+    public void shouldFailToParse() {
+        this.instance
+                .withInput(this.key, new Text("blah blah"))
+                .runTest();
     }
 }
